--- a/style.css
+++ b/style.css
@@ -1,33 +1,46 @@
 body{
-    background-color: #3F3F3E;
+    background: #3F3F3E url("media/background.jpg");
+}
+
+h1{
+    font-variant: small-caps;
+    color: white;
+    font-family: "Century Gothic", sans-serif;
+    font-size: 30px;
+    padding: 10px;
+    background-color: #FF5454;
+    margin:0px;
+    width: 100%;
+}
+
+h3{
+    text-align: center;
+    padding: 10px;
+
+    color: white;
+    font-family: "Century Gothic", sans-serif;
+    font-size: 30px;
 }
 
 button{
-    padding: 10px 20px 10px 20px;
-    text-decoration: none;
-    color: white;
-    text-shadow:0 1px 0 #263666;
-    border: 0;
-}
-h3{
-    background-color: dodgerblue;
-}
-#answer1 {
-    background-color: #00B2EE;
+    padding: 20px 0px 20px 0px;
+    font-family: "Century Gothic", sans-serif;
+    font-size: 25px;
+    color: black;
+    background-color: white;
+    border: 0px;
+    border-radius: 3px;
+    width: 500px;
+    margin: 10px;
 }
 
-#answer2 {
-    background-color: #FEC123;
+#buttons{
+    margin: 20px auto;
+    width: 656px;
+    text-align: center;
 }
-
-#answer3 {
-    background-color: #D24D3B;
-}
-
-#answer4 {
-    background-color: #8CAB3C;
-}
-
 button:hover {
+    font-weight: bold;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
