--- a/style.css
+++ b/style.css
@@ -1,31 +1,95 @@
 body{
-    background-color: #3F3F3E;
+    background: #3F3F3E url("media/background.jpg");
+}
+
+h1{
+    font-variant: small-caps;
+    color: white;
+    font-family: "Century Gothic", sans-serif;
+    font-size: 30px;
+    padding: 10px;
+    background-color: #FF5454;
+    margin:0px;
+    width: 100%;
+}
+
+h3{
+    text-align: center;
+    padding: 10px;
+    color: white;
+    font-family: "Century Gothic", sans-serif;
+    font-size: 30px;
 }
 
 button{
-    padding: 10px 20px 10px 20px;
-    text-decoration: none;
-    color: white;
-    text-shadow:0px 1px 0px #263666;
+    padding: 20px 0 20px 0;
+    font-family: "Century Gothic", sans-serif;
+    font-size: 25px;
+    color: black;
+    background-color: white;
     border: 0px;
+    border-radius: 3px;
+    width: 500px;
+    margin: 10px;
 }
 
-#answer1 {
-    background-color: #00B2EE;
+#Buttons{
+    margin: 20px auto;
+    width: 656px;
+    text-align: center;
 }
-
-#answer2 {
-    background-color: #FEC123;
-}
-
-#answer3 {
-    background-color: #D24D3B;
-}
-
-#answer4 {
-    background-color: #8CAB3C;
-}
-
 button:hover {
+    font-weight: bold;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+#myInput {
+    border-box: box-sizing;
+    background-image: url('searchicon.png');
+    background-position: 14px 12px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 14px 20px 12px 45px;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    min-width: 230px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #ddd}
+
+.show {display:block;}
+ul {
+    display: inline;
 }
